Prevent button wrapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,7 @@
     transition: background-color 0.3s ease;
     margin-top: 0.5rem; /* Add margin to the top */
     margin-bottom: 0.5rem; /* Add margin to the bottom */
+    white-space: nowrap;
 }
 
 .red-btn + .red-btn {
@@ -100,6 +101,7 @@
     transition: background-color 0.3s ease;
     margin-top: 0.5rem; /* Add margin to the top */
     margin-bottom: 0.5rem; /* Add margin to the bottom */
+    white-space: nowrap;
 }
 
 .grn-btn + .red-btn {
@@ -114,7 +116,8 @@
     display: flex;
     flex-direction: column;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: auto;
+    width: 100%;
 }
 
 .tabs {
